--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -12,4 +12,4 @@ COPY . .
 EXPOSE 3000
 # Configurar os comandos para iniciar a aplicação de acordo com as boas práticas
 ENTRYPOINT ["npm", "start"]
-# Dica: Leia a seção Docker e Docker-compose no README para mais informações
+# Dica: Leia a seção Docker e Docker-compose no README para mais informaçõesg
